* ForeingExchange.Droid.csproj: Se crean los archivos de recursos de   idiomas y la clase de configuracion para cada plataforma iso,droid.
* Info.plist:
* packages.config:
* packages.config:
* ApiService.cs:
* ForeingExchange.iOS.csproj:
* Localize.cs:
* packages.config:
* Localize.cs:
* MainView.xaml:
* Lenguages.cs:
* ForeingExchange.csproj:
* Resource.resx:
* ILocalize.cs:
* PlatformCulture.cs:
* Resource.es.resx:
* Resource.fr.resx:
* Resource.pt.resx:
* MainViewModel.cs:
* TranslateExtension.cs:
* Resource.Designer.cs:

--- a/ForeingExchange/Views/MainView.xaml
+++ b/ForeingExchange/Views/MainView.xaml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ForeingExchange.Views.MainView" BackgroundColor="Blue" BindingContext="{Binding Main , Source={StaticResource Locator}}">
+<ContentPage 
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    xmlns:i18n="clr-namespace:ForeingExchange.Helpers"
+    x:Class="ForeingExchange.Views.MainView" BackgroundColor="Blue"
+    BindingContext="{Binding Main , Source={StaticResource Locator}}">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness" iOS="20,30,20,10" Android="10" />
     </ContentPage.Padding>
     <ContentPage.Content>
         <StackLayout>
-            <Label FontAttributes="Bold" FontSize="Large" TextColor="White" HorizontalOptions="Center" Margin="10" Text="Foreign Exchange Gabriel">
+            <Label FontAttributes="Bold" 
+                FontSize="Large" 
+                TextColor="White"
+                HorizontalOptions="Center"
+                Margin="10"
+                Text="{i18n:Translate Title}">
             </Label>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width=".5*" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width=".5*" />
                     <ColumnDefinition Width=".5*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -19,7 +29,7 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Label 
-                    Text="Amount"
+                    Text="{i18n:Translate AmountLabel}"
                     TextColor="White" 
                     Grid.Column="0" 
                     Grid.Row="0" 
@@ -30,12 +40,12 @@
                     Grid.Row="0" 
                     Grid.ColumnSpan="2" 
                     Text="{Binding Amount, Mode=TwoWay}" 
-                    Placeholder="Enter the amount to convert...">
+                    Placeholder="{i18n:Translate AmountPlaceHolder}">
                 </Entry>
                 <Label 
                     Grid.Column="0"
                     Grid.Row="1"
-                    Text="Source rate: " 
+                    Text="{i18n:Translate SourceRateLabel}" 
                     TextColor="White"
                     VerticalOptions = "Center">
                 </Label>
@@ -46,13 +56,13 @@
                     ItemDisplayBinding="{Binding Name}"
                     ItemsSource="{Binding Rates}" 
                     SelectedItem="{Binding SourceRate, Mode=TwoWay}"
-                    Title="Select a source rate...">
+                    Title="{i18n:Translate SourceRateTitle}">
                 </Picker>
 
                 <Label 
                     Grid.Column = "0"
                     Grid.Row = "2"
-                    Text="Target rate: " 
+                    Text="{i18n:Translate TargetRateLabel}" 
                     TextColor="White"
                     VerticalOptions = "Center">
                 </Label>
@@ -63,7 +73,7 @@
                     ItemDisplayBinding="{Binding Name}"
                     ItemsSource="{Binding Rates}" 
                     SelectedItem="{Binding TargetRate, Mode=TwoWay}"
-                    Title="Select a target rate...">
+                    Title="{i18n:Translate TargetRateTitle}">
                  </Picker>
                 <Image 
                     Grid.Column="2"
@@ -72,6 +82,9 @@
                     HeightRequest = "40"
                     WidthRequest = "40"
                     Source="if_switch">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding SwitchCommand}" />
+                    </Image.GestureRecognizers>
                 </Image>
             </Grid>
 
@@ -85,7 +98,7 @@
                 BackgroundColor="Red" 
                 FontAttributes="Bold" 
                 IsEnabled="{Binding IsEnable, Mode=TwoWay}"
-                Text="Convert" 
+                Text="{i18n:Translate Convert}" 
                 TextColor="Blue"
                 BorderRadius="25" 
                 HeightRequest="50">
@@ -98,6 +111,9 @@
                 Text="{Binding Result, Mode=TwoWay }" 
                 VerticalOptions="FillAndExpand" 
                 VerticalTextAlignment="Center">
+            </Label>
+            <Label
+                 Text="{Binding Status, Mode=TwoWay}">
             </Label>
         </StackLayout>
     </ContentPage.Content>
